Solves issues found by SonarQube